Update Deep Neural Network - Application.ipynb

--- a/Deep Neural Network - Application.ipynb
+++ b/Deep Neural Network - Application.ipynb
@@ -5,17 +5,7 @@
    "metadata": {},
    "source": [
     "# Deep Neural Network for Image Classification: Application\n",
-    "\n",
-    "By the time you complete this notebook, you will have finished the last programming assignment of Week 4, and also the last programming assignment of Course 1! Go you! \n",
-    "\n",
-    "To build your cat/not-a-cat classifier, you'll use the functions from the previous assignment to build a deep network. Hopefully, you'll see an improvement in accuracy over your previous logistic regression implementation.  \n",
-    "\n",
-    "**After this assignment you will be able to:**\n",
-    "\n",
-    "- Build and train a deep L-layer neural network, and apply it to supervised learning\n",
-    "\n",
-    "Let's get started!"
-   ]
+    "\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +25,7 @@
     "    - [Exercise 2 - L_layer_model](#ex-2)\n",
     "    - [5.1 - Train the model](#5-1)\n",
     "- [6 - Results Analysis](#6)\n",
-    "- [7 - Test with your own image (optional/ungraded exercise)](#7)"
+    "- [7 - Test with your own image](#7)"
    ]
   },
   {
