--- a/Deep Neural Network - Application.ipynb
+++ b/Deep Neural Network - Application.ipynb
@@ -19,10 +19,10 @@
     "    - [3.2 - L-layer Deep Neural Network](#3-2)\n",
     "    - [3.3 - General Methodology](#3-3)\n",
     "- [4 - Two-layer Neural Network](#4)\n",
-    "    - [Exercise 1 - two_layer_model](#ex-1)\n",
+    "    - [Two_layer_model](#ex-1)\n",
     "    - [4.1 - Train the model](#4-1)\n",
     "- [5 - L-layer Neural Network](#5)\n",
-    "    - [Exercise 2 - L_layer_model](#ex-2)\n",
+    "    - [L_layer_model](#ex-2)\n",
     "    - [5.1 - Train the model](#5-1)\n",
     "- [6 - Results Analysis](#6)\n",
     "- [7 - Test with your own image](#7)"
